modules/apps/langfuse/gateway/manifests/langfuse.Gateway.yaml
## Copyright © 2022-2026, Oracle and/or its affiliates.
## All rights reserved. The Universal Permissive License (UPL), Version 1.0 as shown at http://oss.oracle.com/licenses/upl

apiVersion: v1
kind: Namespace
metadata:
  name: langfuse
  labels: 
    loadbalancer.oci.oraclecloud.com/pod-readiness-gate-inject: enabled
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: langfuse-gateway
  namespace: langfuse
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      oci.oraclecloud.com/initial-freeform-tags-override: '{"source": "istio-gateway"}'
      oci.oraclecloud.com/load-balancer-type: "lb"
      service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
      service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "100"
      service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "500"
  listeners:
  - name: http
    # hostname: "*"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    # hostname: "*"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: langfuse-web-ssl-certificate-secret
